# sdl3-gamedev

./: .gitignore  CMakeLists.txt  CMakeUserPresets.json  index.html  launch.vs.json
data/maps/: AllTiles.tsx  largemap.tmx  level1.tmx  smallmap.tmx
sdl3-demo/: CMakeLists.txt  animation.h  collisionsystem.cpp  collisionsystem.h  commanddispatch.h  commands.h  component.h  controller.h  coresubjects.h  events.h  framecontext.h  gameobject.h  gamestate.h  inputstate.h  message.h  messagedispatch.h  messages.h  observer.h  resources.h  sdl3-demo.cpp  state.h  tmx.cpp  tmx.h
sdl3-demo/behaviors/: playerbehavior.h
sdl3-demo/components/: animationcomponent.cpp  animationcomponent.h  collisioncomponent.cpp  collisioncomponent.h  component.cpp  component.h  inputcomponent.cpp  inputcomponent.h  observer.h  physicscomponent.cpp  physicscomponent.h  playeranimationcomponent.h  playermovecomponent.h  rendercomponent.cpp  rendercomponent.h  statecomponent.cpp  statecomponent.h
sdl3-demo/components/player/: playercontrollercomponent.cpp  playercontrollercomponent.h  playermovecomponent.cpp  playermovecomponent.h  statecomponent.cpp  statecomponent.h
sdl3-demo/controllers/: playercontroller.cpp  playercontroller.h
sdl3-demo/controllers/states/: airbornestate.cpp  airbornestate.h  idlestate.cpp  idlestate.h  runningstate.cpp  runningstate.h  slidingstate.cpp  slidingstate.h
sdl3-demo/demos/platformer/: CMakeLists.txt  events.h  main.cpp  platformer.cpp  platformer.h
sdl3-demo/demos/platformer/components/: enemycomponent.cpp  enemycomponent.h  events.h  healthcomponent.cpp  healthcomponent.h  playercontrollercomponent.cpp  playercontrollercomponent.h  projectilecomponent.cpp  projectilecomponent.h  spriterendercomponent.h  weaponcomponent.cpp  weaponcomponent.h
sdl3-demo/demos/platformer/systems/: damagesystem.cpp  damagesystem.h  enemysystem.cpp  enemysystem.h  playercontrolsystem.cpp  playercontrolsystem.h  projectilesystem.cpp  projectilesystem.h  weaponsystem.cpp  weaponsystem.h
sdl3-demo/engine/: CMakeLists.txt  animation.h  animationplaybackmode.h  application.h  componentsystems.cpp  componentsystems.h  config.h  engine.cpp  engine.h  framecontext.h  framestage.h  gameobject.cpp  gameobject.h  gamestate.h  ghandle.h  inputstate.h  logger.h  node.cpp  node.h  nodehandle.h  objectholder.h  resources.cpp  resources.h  sdlstate.h  services.h  timer.h  tmx.cpp  tmx.h  world.h
sdl3-demo/engine/components/: animationcomponent.cpp  animationcomponent.h  basiccameracomponent.cpp  basiccameracomponent.h  collisioncomponent.cpp  collisioncomponent.h  component.cpp  component.h  componententry.h  componentstage.h  componentstore.cpp  componentstore.h  inputcomponent.cpp  inputcomponent.h  maintainercomponent.h  physicscomponent.cpp  physicscomponent.h  rendercomponent.cpp  rendercomponent.h  spritecomponent.cpp  spritecomponent.h
sdl3-demo/engine/components/player/: playercontrollercomponent.cpp  playercontrollercomponent.h  statecomponent.h
sdl3-demo/engine/containers/: atomicringbuffer.h  ringbuffer.h
sdl3-demo/engine/messaging/: command.h  commanddispatcher.h  commands.h  datadispatcher.h  datapump.h  datapumps.h  dispatcher.h  event.h  eventdispatcher.h  eventqueue.cpp  eventqueue.h  events.h  message.h  messagedispatch.h  messagequeue.h  messages.h  messaging.h  observer.h
sdl3-demo/engine/systems/: basiccamerasystem.cpp  basiccamerasystem.h  collisionsystem.cpp  collisionsystem.h  inputsystem.cpp  inputsystem.h  physicssystem.cpp  physicssystem.h  spriteanimationsystem.cpp  spriteanimationsystem.h  spriterendersystem.cpp  spriterendersystem.h  system.h  systemregistry.h  timersystem.cpp  timersystem.h
sdl3-demo/engine/systems/context/: rendercontext.h
